# nhanDienDanhTinhNguoi

./: .gitignore  README.md  app.py  face_recognition_model.pkl  main.py  pyproject.toml  requirements.txt
datasets/: prepare.ipynb
face_recognition/: app.py  config.py  face_controller.py  face_model.py  ui.py
facenet/: create_database_from_cropped.py  live_recognition_with_database.py
facenet/notebooks/: augment.ipynb  face_tracking.ipynb  facenet.ipynb  finetune.ipynb  infer.ipynb  mtcnn.ipynb
models/: face_database_all.pkl  face_database_all_v2.pkl  face_database_avg.pkl  face_database_avg_v2.pkl  face_database_detailed.pkl  face_database_detailed_v2.pkl  face_dataset.py  face_model.py  face_recognition.py  face_recognizer.pkl
utils/: image_utils.py
