[project]
name = "nhandiendanhtinhnguoi"
version = "0.1.0"
description = "Facial recognition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "face-recognition>=1.3.0",
    "facenet-pytorch>=2.5.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "setuptools>=80.9.0",
]
