[project]
name = "nhandiendanhtinhnguoi"
version = "0.1.0"
description = "Facial recognition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "face-recognition>=1.3.0",
    "facenet-pytorch>=2.5.3",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
    "tensorboard>=2.19.0",
    "tqdm>=4.67.1",
]
